ops/manifests/41-upload-frontend.svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: bmai-frontend
  name: bmai-frontend
  namespace: bmai-frontend
  annotations:
    service.beta.kubernetes.io/external-traffic: OnlyLocal
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    run: bmai-frontend
    track: stable
  type: NodePort
  sessionAffinity: ClientIP
