ops/manifests/99-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: bmai-frontend
  namespace: bmai-frontend
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - frontend.bmai.pwc.delivery
    secretName: bmai-frontend-tls
  rules:
  - host: frontend.bmai.pwc.delivery
    http:
      paths:
      - path: /.well-known/acme-challenge
        backend:
          serviceName: kube-lego-gce
          servicePort: 8080
      - path: /*
        backend:
          serviceName: bmai-frontend
          servicePort: 80
